common/app/assets/stylesheets/module/nav/_control.scss
/* ==========================================================================
   Navigation controls
   ========================================================================== */

/* Control
   ========================================================================== */

.control {
    &,
    &:link,
    &:active,
    &:hover,
    &:visited {
        font-family: $serif !important;
        font-size: 13px;
        background-color: transparent;
        vertical-align: top;
        text-decoration: none !important;
    }

    &.is-active,
    &.is-active {
      background-color: #fff;
      color: $blue;
    }
}

.i-nav-divider {
    float: left;
    height: 28px;
    width: 1px;
    margin-right: 8px;
    background-color: #274C98;
    border-left: 1px solid #122853;
}

.is-active .i-nav-divider {
    border-color: #fff;
    background-color: #fff;
}


/* Sections control - (Hamburger icon )
   ========================================================================== */

.control--sections,
.control--sections:link,
.control--sections:active,
.control--sections:hover,
.control--sections:visited {
    float:right;
    width: auto;
    height: 28px;
    padding: 15px $gutter 15px 0;

    @media (min-width: $tablet) {
        position: absolute;
        right: 0;
        top: 58px;
        padding: 0 $gutter 10px $gutter;
        margin: $baseline*2 0 $baseline*2 0;
        background-color: transparent;
        color: #444;
        font-size: 14px;
    }
}

.control__menu.i {
    float: right;
    margin-top: 8px;
    text-indent: -1000em;
}

span.control__menu.i-menu {
    display: inline-block;
    margin-left: 6px;

    @media (min-width: $tablet) {
        display: none;
    }
}

.control--sections .i-menu-active {
    display: none;

    @media (min-width: $tablet) {
        margin-top: $baseline*2;
        display: inline-block;
    }
}

.control--sections .i-nav-divider {
    @media (min-width: $tablet) {
        margin-right: $baseline*3;
        border-color: #BBBBBB;
        background-color: #E3E3DB;
    }
}

/* Top stories control
   ========================================================================== */

.control--topstories {
    &:link,
    &:active,
    &:hover,
    &:visited,
    &:focus {
        float: right;
        height: 28px;
        margin: 0;
        padding: 17px 0 13px 0;
        color: #fff;

        &.is-active {
            color: $blue;
        }

        @media (min-width: $tablet) {
            position: absolute;
            top: 0;
            right: 48px;

            &.control--right {
                right: 0;
            }

        }
    }
}


.control--topstories span {
    display: none;
    height: 28px;
    vertical-align: top;
    line-height: 28px;
    margin-right: $baseline*2;
    margin-left: $baseline*2;

    @media (min-width: 34em) {
        display: inline-block;
    }
}

    .control--topstories.is-active span {
        background: none !important;
        border-color: transparent !important;
    }

.control--topstories .i-top-stories {
    margin: 5px $baseline*4 0 $baseline*2;

    @media (min-width: $tablet) {
        margin-left: 0;
    }
}

.control--topstories .i-nav-divider {
    margin-top: -2px;
}



/* Search control
   ========================================================================== */

.control--search {
    float:right;
    height: 28px;
    padding: 15px $baseline*4 15px 0;
    border: none;

    @media (min-width: $tablet) {
        position: absolute;
        top: 0;
        right: 0;
    }
}

.control--search .i-search {
    margin-top: $baseline*2;
    margin-left: 6px;
    margin-right: 2px;
}




/* Profile control
   ========================================================================== */
.control--profile {
    float: right;
    height: 28px;
    padding: 17px 0 13px 0;
    width: auto;

    &:link,
    &:active,
    &:hover,
    &:visited,
    &:focus { color: #fff; }

    @media (min-width: $tablet) {
        position: absolute;
        top: 0;
        right: 178px;
        white-space: nowrap;
    }
}

.control--profile__info {
    display: none;
    height: 28px;
    vertical-align: top;
    line-height: 28px;
    margin-right: $baseline*2;
    margin-left: $baseline*2;

    @media (min-width: 34em) {
        display: inline-block;
        max-width: 110px;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

.control--profile .i-profile {
    margin: 5px $baseline*4 0 $baseline*2;

    @media (min-width: $tablet) {
        margin-left: 0;
    }
}

